--- a/frontend/networking-app/package.json
+++ b/frontend/networking-app/package.json
@@ -11,11 +11,15 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.0.17",
+    "@react-spring/web": "^9.7.2",
+    "@react-three/drei": "^9.66.4",
+    "@react-three/fiber": "^8.13.0",
     "@reduxjs/toolkit": "^1.9.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
-    "react-router-dom": "^6.11.1"
+    "react-router-dom": "^6.11.1",
+    "three": "^0.152.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
