--- a/frontend/networking-app/package.json
+++ b/frontend/networking-app/package.json
@@ -15,8 +15,11 @@
     "@react-three/drei": "^9.66.4",
     "@react-three/fiber": "^8.13.0",
     "@reduxjs/toolkit": "^1.9.5",
+    "@supabase/supabase-js": "^2.21.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
+    "react-lottie": "^1.2.3",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.11.1",
     "three": "^0.152.2"
