--- a/backend/package.json
+++ b/backend/package.json
@@ -15,7 +15,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.9.1",
     "pg": "^8.10.0",
     "uuid": "^9.0.0"
   },
