--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
+    "mailtrap": "^3.1.1",
     "morgan": "^1.10.0",
     "nodemailer": "^6.9.1",
     "pg": "^8.10.0",
