--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "morgan": "^1.10.0",
     "nodemailer": "^6.9.1",
     "pg": "^8.10.0",
+    "sharp": "^0.32.1",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
