--- a/frontend/networking-app/package.json
+++ b/frontend/networking-app/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "host": "vite --host"
   },
   "dependencies": {
     "@heroicons/react": "^2.0.17",
@@ -21,6 +22,7 @@
     "react-lottie": "^1.2.3",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.11.1",
+    "socket.io-client": "^4.6.1",
     "three": "^0.152.2"
   },
   "devDependencies": {
